Fixed the sponsor image spacing

--- a/css/hackuc.css
+++ b/css/hackuc.css
@@ -467,6 +467,9 @@ ul.banner-social-buttons {
     .navbar-custom .nav li a:focus, .navbar-custom .nav li a:hover {
         background-color: rgba(100, 100, 100, 0.5);
     }
+    #sponsors br {
+        display: none;
+    }
 }
 
 @media(max-width: 990px) {
@@ -744,7 +747,7 @@ body {
 @media(max-width: 768px) {
     .tinysponsorimg {
         display: block;
-        width: 25%;
+        width: 30%;
         margin: 0 auto 1em;
     }
     .tinysponsorimg.bronze {
